zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/type_dedupe.zig
const SomeVeryVeryVeryLongName = struct {};

fn foo(a: *SomeVeryVeryVeryLongName) void {
    _ = a;
}

export fn entry() void {
    const a: SomeVeryVeryVeryLongName = .{};

    foo(a);
}

// error
//
// :10:9: error: expected type '*T', found 'T'
// :10:9: note: T = tmp.SomeVeryVeryVeryLongName
// :1:34: note: struct declared here
// :3:11: note: parameter type declared here
